--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -23,9 +23,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.0.0
+  version_num: 2.1.0
   release_notes: |
-    Release v2.0.0 on July 26th, 2019.
+    Release v2.1.0 on October 2nd, 2019.
   github:
     - user: nats-io
       repo: nats.c
@@ -38,9 +38,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.0.0
+  version_num: 2.1.0
   release_notes: |
-    Release v2.0.0 on July 26th, 2019.
+    Release v2.1.0 on October 2nd, 2019.
   github:
     - user: nats-io
       repo: stan.c
