--- a/data/events.toml
+++ b/data/events.toml
@@ -14,6 +14,14 @@ what = "Deploy Secure and Scalable Sevices Across Kubernetes Clusters with NATS"
 where = "San Diego, California"
 ref = "https://sched.co/UakY"
 
+[[events]]
+venue = "Cloud Native Computing Sophia-Antipolis MeetUp"
+when = "Thursday, December 12, 2019"
+who = "Derek Collison & Waldemar Quevedo"
+what = "NATS.io"
+where = "Valbonne, France"
+ref = "https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/265897038/"
+
 
 # comment out to save
 #[[icymi]]
