--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -91,8 +91,8 @@ Releases:
     Release v1.7.2 on February 21st, 2019.
   github:
     - user: nats-io
-      repo: go-nats
-      link: https://github.com/nats-io/go-nats
+      repo: nats.go
+      link: https://github.com/nats-io/nats.go
 
 - name: Java
   type: nats-client
