--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -551,9 +551,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.4.5
+  version_num: 0.5.2
   release_notes: |
-    Release v0.4.5 on May 16th, 2019.
+    Release v0.5.2 on December 3rd, 2019.
   github:
     - user: nats-io
       repo: stan.go
