--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,8 @@ title = "NATS - Documentation"
 SectionPagesMenu = "main"
 noCategoryLink = true
 githubBaseUrl = "https://github.com/nats-io/nats-site/edit/master/content"
+description = "NATS High-Performnance Messaging System"
+images = ["/img/nats-icon-color.svg"]
 
 [[menu.main]]
 name = "About"
