--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ pygmentsUseClasses = "true"
 pygmentsStyle = "native"
 
 [params]
+favicon = "favicon.ico"
 font_awesome_version = "5.12.0"
 leftNav = false
 description = "NATS is a high performance messaging system that acts as a distributed messaging queue for cloud native applications, IoT device messaging, and microservices architecture."
