Add initial home hero concept
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,7 @@ images = ["/img/nats-icon-color.png"]
 
 [params.logos]
 navbar = "nats-horizontal-white.png"
+hero = "nats-horizontal-color.png"
 
 [[params.fonts]]
 name = "Source Sans Pro"
