--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ noCategoryLink = true
 githubBaseUrl = "https://github.com/nats-io/nats-site/edit/master/content"
 images = ["/img/nats-icon-color.png"]
 description_long = """
-**NATS** is a simple, secure, high-performance, open source messaging system for cloud native applications, IoT messaging, and microservice architectures.
+**NATS.io** is a simple, secure, high-performance, open source messaging system for cloud native applications, IoT messaging, and microservice architectures.
 
 Members of the [Synadia](https://synadia.com) team created and maintain the NATS and Streaming Servers, as well as clients written in Go, Java, JavaScript/TypeScript, Python, Ruby, C#, C, and NGINX. The community has also contributed a growing list of client libraries, including Arduino, Rust, Lua, PHP, Perl, and [more](https://nats.io/download).
 
