--- a/config.toml
+++ b/config.toml
@@ -2,11 +2,14 @@ baseURL = "https://nats.io/"
 languageCode = "en-us"
 defaultLanguage = "en"
 title = "NATS"
-disableKinds = ["taxonomy", "taxonomyTerm"]
 
 pygmentsCodeFences = "true"
 pygmentsUseClasses = "true"
 pygmentsStyle = "native"
+
+[taxonomies]
+tag = "tags"
+category = "categories"
 
 [params]
 tagline = "Cloud Native, Open Source, High-performance Messaging"
