--- a/data/events.toml
+++ b/data/events.toml
@@ -1,10 +1,26 @@
 [[events]]
 venue = "KubeCon + CloudNativeCon Europe"
-when = "March 30 - April 2, 2020"
-who = "NATS Team"
-what = "NATS Intro & Deep Dive"
+when = "Tuesday, March 31st, 15:30 - 16:05"
+who = "Colin Sullivan, R.I. Pienaar"
+what = "Easy, Secure & Fast - Using NATS for Data Streams & Services"
 where = "Amsterdam, The Netherlands"
-ref = "https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/"
+ref = "https://sched.co/Zewv"
+
+[[events]]
+venue = "KubeCon + CloudNativeCon Europe"
+when = "Wednesday, April 1st, 10:55 - 11:30"
+who = "Waldemar Quevedo, Phil Pennock"
+what = "Deep Dive into building a secure & multi-tenant SaaS solution with NATS"
+where = "Amsterdam, The Netherlands"
+ref = "https://sched.co/Zext"
+
+[[events]]
+venue = "KubeCon + CloudNativeCon Europe"
+when = "Thursday, April 2nd, 16:35 - 18:05"
+who = "Waldemar Quevedo"
+what = "Tutorial: Building Secure, Decentralized & Global Applications with NATS"
+where = "Amsterdam, The Netherlands"
+ref = "https://sched.co/Zekp"
 
 
 
