Begin revamping client library system
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ ehthumbs.db
 /public
 /resources
 
+# Generated client pages
+content/download/*.md
+!content/download/_index.md
+
 # Node
 node_modules
 npm-debug.log
