Fix PGP/WKD setup to be invoked & work in Netlify
1. Fix placement of WKD build in gulp cfg
  * The netlify make targets use gulp only to build `assets`, not
    `build`, so the `openpgp-wkd` task was not getting invoked in that
    flow.
2. Reconfigure `openpgp-wkd` to output into `static/` and invoke for
   the assets flow.  Remove requirement for the output dir to already
   exist, since these gulp tasks are run in parallel and we're no longer
   invoked in a later stage.
3. Find a way to get a sane working Python in both Netlify and Travis
  * Docker image `netlify/build:v3.3.5` contains two Python3
    interpreters and defaults to the older one with buggy/limited
    pathlib support.
  * We can specify `python3.7` in the `#!` line but that breaks Travis,
    where for `language: node_js` we don't get to choose available
    Python interpreters.
  * So use a shell wrapper to find a working Python.
4. Ran `travis lint`, removed the meaningless sudo, commented the
   will-change-to-unused item.
5. Handle ancient GnuPG putting the email address in a different place.
6. Configure Netlify to serve PGP keys with a better MIME type.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 ---
-sudo: required
 dist: bionic
 language: node_js
 
 node_js:
   - 9
-
-python:
-  - 3.6.x
 
 git:
   depth: false
@@ -29,6 +25,10 @@ script:
   - if [[ "$TRAVIS_TAG" != "" ]]; then mv ./public site_$TRAVIS_TAG; fi
   - if [[ "$TRAVIS_TAG" != "" ]]; then zip site_$TRAVIS_TAG.zip -r site_$TRAVIS_TAG; fi
 
+# "travis lint" complaints about skip_cleanup; looking at
+# https://docs.travis-ci.com/user/deployment-v2#cleaning-up-the-git-working-directory
+# I see that the deploy v2 approach is to skip by default, but that v1 is still
+# default, so we're leaving that option in. -- 2020-02
 deploy:
   - provider: releases
     api_key: $GITHUB_TOKEN
