--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,8 @@ command = "make netlify-preview-build"
 
 [context.branch-deploy]
 command = "make netlify-preview-build"
+
+[[headers]]
+  for = "/.well-known/openpgpkey/hu/*"
+  [headers.values]
+  Content-Type = "application/octet-stream"
