Add initial template for server links
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ ehthumbs.db
 # Generated client pages
 content/download/*.md
 !content/download/_index.md
+!content/download/nats-server.md
+!content/download/nats-streaming-server.md
 
 # Node
 node_modules
