--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://nats.io/"
 languageCode = "en-us"
 defaultLanguage = "en"
 title = "NATS"
+disableKinds = ["taxonomy", "taxonomyTerm"]
 
 pygmentsCodeFences = "true"
 pygmentsUseClasses = "true"
