--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -319,6 +319,21 @@ Releases:
       repo: elm-nats
       link: https://github.com/orus-io/elm-nats
 
+- name: Common Lisp
+  type: nats-client
+  supported: false
+  language: lisp
+  author:
+    - name: ccQ
+      link: https://github.com/ccqpein
+  version_num: 0.1.0
+  release_notes: |
+
+  github:
+    - user: ccqpein
+      repo: nats-cl
+      link: https://github.com/ccqpein/nats-cl
+
 - name: Erlang
   type: nats-client
   supported: false
@@ -573,21 +588,6 @@ Releases:
     - user: iamd3vil
       repo: nats_ex
       link: https://github.com/iamd3vil/nats_ex
-
-- name: Common Lisp
-  type: nats-client
-  supported: false
-  language: Common Lisp
-  author:
-    - name: ccQ
-      link: https://github.com/ccqpein
-  version_num: 0.1.0
-  release_notes: |
-    No Release Notes
-  github:
-    - user: ccQpein
-      repo: nats-cl
-      link: https://github.com/ccqpein/nats-cl
 
 - name: Python Asyncio
   type: streaming-client
